# textpressocentral

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  TextpressoCentralGlobalDefinitions.h  hmm_dockerfile  hmm_dockerfile-ubuntu-tpc-buildtest-16.04  lighttpd.conf  pg_hba.conf  postgresql.conf  run.sh  tpctl.sh  tpctl.sh_new
ConfigurationFiles/: etc.apache2.tgz  fastcgi.conf  wt_config.3.3.2.xml  wt_config.3.3.4.xml  wt_config.xml  wt_config_debug.xml
CreateListofOntologies/: main.cpp
GenerateLexicalVariations/: LexicalVariations.h  TpOntApi.cpp  TpOntApi.h  main.cpp
LexicalVariations/: LexicalVariations.h  main.cpp
LexicalVariations/resources/: irrverbs.txt
OboFileAnalyzer/: OboEntry.cpp  OboEntry.h  OboFileSegmentation.cpp  OboFileSegmentation.h  main.cpp
Pdf2Tpcas/: ElementCluster.cpp  ElementCluster.h  PdfInfo.cpp  PdfInfo.h  PdfMyFontInfo.cpp  PdfMyFontInfo.h  Stream2Tpcas.cpp  TextElement.cpp  TextElement.h  common_runtime_errors  main.cpp
TpC/: AboutUs.cpp  AboutUs.h  AnnotationGroupBox.cpp  AnnotationGroupBox.h  AnnotatorContainer.cpp  AnnotatorContainer.h  AssistedFieldValueForm.cpp  AssistedFieldValueForm.h  AuthSingleton.h  AuthWidget.C  AuthWidget.h  AutocompleteAndValidationDialog.cpp  AutocompleteAndValidationDialog.h  Browsers.cpp  Browsers.h  CategoryPreferences.cpp  CategoryPreferences.h  Chunk.cpp  Chunk.h  ColorSet.cpp  ColorSet.h  ConfigurableAnnotatorContainer.cpp  ConfigurableAnnotatorContainer.h  CreateCurationForm.cpp  CreateCurationForm.h  Curation.cpp  Curation.h  CurationDatabase.cpp  CurationDatabase.h  CurationFieldConfiguration.cpp  CurationFieldConfiguration.h  CurationFormView.hpp  CurationFormsConfiguration.cpp  CurationFormsConfiguration.h  CurationGroupBox.cpp  CurationGroupBox.h  Customization.cpp  Customization.h  CustomizeColors.cpp  CustomizeColors.h  (+129 more)
TpC/resources/: TpC.css  TpCentral.css  TpCentral.xml  authstrings.xml  authtemplates.xml  curation-form.xml  customize-colors.xml  home.contactus.txt  home.firststeps.txt  home.introduction.txt  home.news.txt  uploadtemplate.tsv
TpCuration/: TextpressoCentralGlobalDefinitions.h  TpCurApi.cpp  main.cpp
TpFlat2OboConverter/: main.cpp
TpOntology/: TpOntApi.cpp  TpOntEntry.cpp  TpOntEntry.h  main.cpp  useful_commands.com
TpOntology/tree-2.81/src/: tt
Tpso/: CreateLexica.bash  input.json  main.cpp  tpso.config.h
Xml2Tpcas/: PugiXml2Tpcas.cpp  PugiXml2Tpcas.h  ReadXml2Stream.cpp  ReadXml2Stream.h  Stream2Tpcas.h  main.cpp
crfasgd/: crfasgd.cpp  crfasgd.h  matrices.cpp
crfsgd/: crfsgd.cpp  crfsgd.h  pstream.h  vectors.h
etc/: installation.notes.txt  ontology.conf  template.bib  tpsoinput.json
etc/Autocomplete/: GOlrAutocomplete
etc/Noctua/: NoctuaIn  NoctuaOut
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
ontologypreparation/current/oboheaderfiles/: #wbls.headerobo#  cg_genetic_interaction_2016_09_13.headerobo  cg_genetic_perturbation_2019_02_20.headerobo  cg_genetic_perturbation_2020_09_16.headerobo  cg_phenotypic_perturbation_2016_09_13.headerobo  chebi.headerobo  disease_2015_01_29.headerobo  fbbt.headerobo  fbcv.headerobo  fbdv.headerobo  gene_celegans.headerobo  gene_celegans_2020_09_16.headerobo  go.headerobo  localization_assay_terms_082208.headerobo  localization_cell_components_082208.headerobo  localization_verbs_082208.headerobo  mf_ea_assay_2011_02_18.headerobo  mf_ea_verbs_2011_02_18.headerobo  mf_int_assay_2009_11_25.headerobo  mf_int_verbs_2009_11_25.headerobo  molecule_uncategorized.headerobo  protein_celegans.headerobo  so.headerobo  tables_and_figures_2016_06_15.headerobo  variation_celegans.headerobo  wbbt.headerobo  wbls.headerobo  wbphenotype.headerobo
ontologypreparation/hand_crafted_categories/disease.categories/: adt.dtb.txt  disease.term.basic.txt  seds
ontologypreparation/old_2019-06-28/: tpontology.hierarchy.txt
ontologypreparation/old_2019-06-28/plainlists/: cg_genetic_interaction_2016-09-13.txt  (+8 more)
ontologypreparation/plainlists/: allele_celegans.2015-12-15_07_07_22.txt  anatomy_2015-09-15.txt  cg_genetic_perturbation_2016-09-13.txt  gene_celegans.txt  localization_assay_terms_082208.txt  mf_ea_verbs-2011-02-18.txt  mf_int_verbs_2009-11-25.txt  molecule_uncategorized.txt  protein_celegans.txt
ontologypreparation/raw_obofiles/: where2findobofiles.txt
ontologypreparation/resources/: List-of-100-Irregular-Plural-Nouns-in-English.all.txt  all-verbs.txt
ontologypreparation/scripts/: download_files.sh  ld.pl  older_populating_script.com  write.tpobo.files.com
supportingscripts/data_aquisition/: fetch_cat_for_tpc.pl  fetch_public_obofiles.sh
supportingscripts/pipelines/: a-not-b.pl  housekeeping.create.image.dirs.com  housekeeping.distributed.linkage.of.files.com  housekeeping.extract.subject.title.journal.com  housekeeping.find.subjects.in.pmcoa.com  housekeeping.gzip.tpcas.files.com  housekeeping.produce.dir.lists.com  housekeeping.updatefileinfos.com  incremental.check.md5sum.com  incremental.extract.nxml.and.graphics.com  incremental.find.files.newer.than.timestamp.com  incremental.find.new.or.changed.pmcoafiles.com  incremental.nxml.2.tpcas-1st.stage.com  incremental.tpcas-1st.stage.2.tpcas-2nd.stage.com  incremental.tpcas-1st.stage.2.tpcas-2nd.with.tmptpontology.stage.com  incremental.wrapper.nxml.2.tpcas-1st.stage.com  initial.get.pmcoafiles.com  initial.get.wbpaperpdfs.com  initial.getmd5sum.pmcoafiles.com  initial.prepare.tpcas-1st.stage.dirs.com
supportingscripts/pipelines4sandbox/: find.new.celegans.pdfs.and.copy.com  find.new.celegans.supplementals.pdfs.and.copy.com  literature.indexing.com  pdf.2.tpcas-1.celegans.com  pdf.2.tpcas-1.celegans.supplementals.com  tpcas1.2.tpcas2.4.1.literature.com  update.celegans.com  wrapper.celegans.com  wrapper.celegans.supplementals.com
supportingscripts/useruploadpipelines/: 00_remove_deleted.com  01_pdf2tpcas-1.com  02_nxml2tpcas-1.com  03_nxmltar2tpcas-1.com  04_tpcas1.to.tpcas2.com  05_indexing.com  06_makelitslive.com  wrapper.com
(+18 files in other folders)
